Replace LinkedList copying with List.copyOf()
Also replace more empty LinkedLists with List.of() and
lists with single entries with List.of(entry);